maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: type mismatch;
 found   : (Int, Int)
 required: Int
  setIndication(sorti, sortie, 0)
                ^JediEscaper:12: error: type mismatch;
 found   : (Int, Int)
 required: Int
  setIndication(sorti, sortie, 0)
                       ^